Update Authentication With Pin API
